--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.2",
+    "lucide-react": "^0.485.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
     "next": "15.2.4",
